--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,42 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "module": "es6",
-    "target": "es6",
-    "jsx": "react",
+    "module": "esnext",
+    "target": "ES2020",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "es2020"
+    ],
+    "jsx": "react-jsx",
     "allowJs": false,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
+    "allowUnreachableCode": false,
+    "noFallthroughCasesInSwitch": true,
+    "exactOptionalPropertyTypes": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "removeComments": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": false,
+
+
   },
   "exclude": ["node_modules"],
-  "include": ["**/*"],
+  "include": ["**/*"]
 }
