--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "main.tsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open --config webpack/webpack.config.js --env env=dev --hot",
-    "build": "webpack --config webpack/webpack.config.js --env env=prod",
+    "start": "NODE_OPTIONS='--experimental-specifier-resolution=node' webpack-dev-server --open --config webpack/webpack.config.js --env env=dev --hot",
+    "build": "NODE_OPTIONS='--experimental-specifier-resolution=node' webpack --config webpack/webpack.config.js --env env=prod",
     "lint": "eslint --fix --ext .ts,.tsx, ."
   },
   "repository": {
@@ -26,6 +26,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
+    "esbuild-loader": "^4.0.2",
     "eslint": "^8.48.0",
     "eslint-config-standard-with-typescript": "^39.0.0",
     "eslint-plugin-import": "^2.28.1",
@@ -33,8 +34,6 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "html-webpack-plugin": "^5.5.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
@@ -43,5 +42,10 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.9.0"
-  }
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "type": "module"
 }
