--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "webpack-merge": "^5.9.0"
   },
   "dependencies": {
+    "@types/crypto-js": "^4.1.3",
+    "crypto-js": "^4.1.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
