feat: integrate zustand

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
     "@typescript-eslint/semi": "off",
     "comma-dangle": "off",
     "@typescript-eslint/comma-dangle": "off",
-    "@typescript-eslint/strict-boolean-expressions": "off"
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/member-delimiter-style": "off"
   },
 
   "settings": {
