--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "zustand": "^4.4.7"
   },
   "type": "module"
 }
